longhorn/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-server
  namespace: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.shriker.dev`)
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
    - kind: Rule
      match: Host(`longhorn.shriker.dev`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: longhorn-frontend
          port: 80
          scheme: h2c
  tls:
    certResolver: le
